--- a/report/input.tex
+++ b/report/input.tex
@@ -1,4 +1,6 @@
 \maketitle          \newpage
-%\input{abstract}    \newpage
+\input{abstract}    \newpage
 \input{intro}       \newpage
+\input{cosi}        \newpage
+\input{cache}       \newpage
 \input{bib}
