--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -4,6 +4,7 @@
 \usepackage{booktabs}
 \usepackage{bookmark}
 \usepackage{listings}
+\usepackage{citeall}
 \lstset{
     basicstyle=\ttfamily\small,
     keepspaces=true,
