--- a/report/bib.bib
+++ b/report/bib.bib
@@ -25,6 +25,14 @@
     urldate = {2022-07-07},
 }
 
+@misc{herrera,
+    author  = {Herrera, Luan},
+    title   = {Issue 990849: Leaking size of cross-origin resource by using Range Requests and Service Workers},
+    url     = {https://bugs.chromium.org/p/chromium/issues/detail?id=990849},
+    date    = {2019-08-06},
+    urldate = {2022-08-15},
+}
+
 @inproceedings{modelbase,
 	doi = {10.1145/3460120.3484739},
 	url = {https://doi.org/10.1145%2F3460120.3484739},
