--- a/report/input.tex
+++ b/report/input.tex
@@ -1,6 +1,7 @@
-\maketitle          \newpage
-\input{abstract}    \newpage
-\input{intro}       \newpage
-\input{cosi}        \newpage
-\input{cache}       \newpage
+%\maketitle          \newpage
+%\input{abstract}    \newpage
+%\input{intro}       \newpage
+%\input{cosi}        \newpage
+%\input{cache}       \newpage
+\input{chr}
 \input{bib}
