--- a/report/bib.bib
+++ b/report/bib.bib
@@ -6,6 +6,80 @@
   	urldate = {2022-07-07},
 }
 
+@misc{papi,
+	author  = {Buckler, Craig},
+	title   = {How to Evaluate Site Speed with the Performance API},
+	url     = {https://blog.openreplay.com/how-to-evaluate-site-speed-with-the-performance-api},
+  	date    = {2021-05-12},
+  	urldate = {2022-09-07},
+}
+
+@misc{m_now,
+    author  = {{MDN contributors}},
+    title   = {performance.now()},
+    url     = {https://developer.mozilla.org/en-US/docs/Web/API/Performance/now},
+    date    = {2022-09-13},
+    urldate = {2022-09-14}
+}
+
+@misc{m_now,
+    author  = {{MDN contributors}},
+    title   = {performance.now()},
+    url     = {https://developer.mozilla.org/en-US/docs/Web/API/Performance/now},
+    date    = {2022-09-13},
+    urldate = {2022-09-14}
+}
+
+@misc{p_moz,
+    author  = {Christensen, Alex},
+    title   = {Bug 146531 - Reduce resolution of performance.now},
+    url     = {https://developer.mozilla.org/en-US/docs/Web/API/Performance/now},
+    date    = {2015-07-01},
+    urldate = {2022-09-14}
+}
+
+@misc{p_web,
+    author  = {Veditz, Daniel},
+    title   = {Reduce precision of performance.now() to 20us},
+    url     = {https://bugzilla.mozilla.org/show_bug.cgi?id=1427870},
+    date    = {2018-01-03},
+    urldate = {2022-09-14}
+}
+
+@misc{p_chr,
+    author  = {{pdr@chromium.org}},
+    title   = {Issue 506723: Reduce resolution of performance.now to prevent timing attacks},
+    url     = {https://bugs.chromium.org/p/chromium/issues/detail?id=506723},
+    date    = {2015-07-03},
+    urldate = {2022-09-14}
+}
+
+@misc{m_now,
+    author  = {{MDN contributors}},
+    title   = {performance.now()},
+    url     = {https://developer.mozilla.org/en-US/docs/Web/API/Performance/now},
+    date    = {2022-09-13},
+    urldate = {2022-09-14}
+}
+
+@misc{timers,
+    author  = {Schwarz, Michael and Maurice, Clémentine and Gruss, Daniel and Mangard, Stefan},
+    title   = {Fantastic Timers and Where to Find Them: High-Resolution Microarchitectural
+Attacks in JavaScript},
+    url     = {https://gruss.cc/files/fantastictimers.pdf},
+    date    = {2020},
+    urldate = {2022-09-14}
+}
+
+@misc{clock,
+    author  = {Sousa, Manuel and terjanq and Clapis, Roberto and Dworken, David and NDevTK and 1lastBr3ath and Brasco and rick.titor and Fredrickson, Chris and jub0bs},
+    title   = {Fantastic Timers and Where to Find Them: High-Resolution Microarchitectural
+Attacks in JavaScript},
+    url     = {Clocks},
+    date    = {2020-12-23},
+    urldate = {2022-09-14}
+}
+
 @article{cosi,
   doi       = {10.48550/ARXIV.1908.02204},
   url       = {https://arxiv.org/abs/1908.02204},
