--- a/report/chr.tex
+++ b/report/chr.tex
@@ -1,9 +1,12 @@
-\section{Service Worker}
+\section{Chromium 漏洞实例}
 
 \href{https://blog.lbherrera.me/}{Luan Herrera} 在 2019 年提出了基于 service worker 以及 performance API，影响到 Chromium 的攻击 \cite{herrera}。
 
-Performance API（性能接口）让开发者精确地测量网页在用户的设备上的性能。\url{https://www.wbolt.com/performance-api.html}
-\url{https://blog.csdn.net/weixin_47450807/article/details/123951462}\url{https://blog.openreplay.com/how-to-evaluate-site-speed-with-the-performance-api}。此攻击
+Service worker
+
+Performance API（性能接口）让开发者精确地测量网页在用户的设备上的性能 \cite{papi}。此攻击
+
+
 
 攻击过程如下：
 
