--- a/report/input.tex
+++ b/report/input.tex
@@ -3,5 +3,6 @@
 %\input{intro}       \newpage
 %\input{cosi}        \newpage
 %\input{cache}       \newpage
-\input{chr}
+%\input{chr}
+\input{types}
 \input{bib}
