--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{bookmark}
 \usepackage{listings}
 \usepackage{citeall}
+\usepackage{multicol}
 \lstset{
     basicstyle=\ttfamily\small,
     keepspaces=true,
