--- a/report/types.tex
+++ b/report/types.tex
@@ -1,4 +1,8 @@
 \section{漏洞类型}
 
-\input{timing}
-\input{cache}
+\input{types/timing}
+\input{types/cache}
+\input{types/xssearch}
+\input{types/winref}
+\input{types/postmsg}
+\input{types/error}
