--- a/report/input.tex
+++ b/report/input.tex
@@ -1,8 +1,11 @@
-%\maketitle          \newpage
-%\input{abstract}    \newpage
-%\input{intro}       \newpage
-%\input{cosi}        \newpage
-%\input{cache}       \newpage
-%\input{chr}
-\input{types}
+\maketitle          \newpage
+\input{abstract}    \newpage
+\input{intro}       
+\input{model}       \newpage
+\input{cosi}        \newpage
+\input{types}       \newpage
+\input{chr}
+
+\newpage
+
 \input{bib}
