--- a/report/chr.tex
+++ b/report/chr.tex
@@ -56,4 +56,8 @@ if (resource->GetResponse().IsHTTP())
 
 \subsection{扩展}
 
+Luan 的概念验证
+
+一个发现是只有 \code{audio} 以及 \code{video} 元素在 URL 中加入 \code{size} 参数时，浏览器才会
+
 不稳定
