--- a/report/chr.tex
+++ b/report/chr.tex
@@ -61,6 +61,10 @@ Luan 的概念验证
 一个发现是只有 \code{audio} 以及 \code{video} 元素在 URL 中加入 \code{size} 参数时，浏览器才会
 
 
-range 65535
+range 65536-
+
+img vs audio/video in determining file type
+
+
 
 不稳定
