--- a/report/chr.tex
+++ b/report/chr.tex
@@ -58,13 +58,14 @@ if (resource->GetResponse().IsHTTP())
 
 Luan 的概念验证
 
-一个发现是只有 \code{audio} 以及 \code{video} 元素在 URL 中加入 \code{size} 参数时，浏览器才会
+假设资源的 URL 是 \code{target.com/resource}。只有 \code{audio} 以及 \code{video} 元素在 URL 中加入 \code{size} 参数时，即 \code{target.com/resource&size=}比如 浏览器才会
 
 
 range 65536-
 
 img vs audio/video in determining file type
 
+\code{performance.getEntries()} 的稳定性也较差。
 
 
 不稳定
