--- a/report/chr.tex
+++ b/report/chr.tex
@@ -61,6 +61,9 @@ Luan 的概念验证
 假设资源的 URL 是 \code{target.com/resource}。只有 \code{audio} 以及 \code{video} 元素在 URL 中加入 \code{size} 参数时，即 \code{target.com/resource&size=}比如 浏览器才会
 
 
+但是如果
+
+
 range 65536-
 
 img vs audio/video in determining file type
