--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage{citeall}
 \usepackage{multicol}
 \lstset{
-    basicstyle=\ttfamily\small,
+    basicstyle=\ttfamily,
     keepspaces=true,
     breaklines=true,
     breakatwhitespace=false,
