--- a/report/input.tex
+++ b/report/input.tex
@@ -1,9 +1,16 @@
+\iffalse
+\fi
+
+
+
 \maketitle          \newpage
 \input{abstract}    \newpage
 \input{intro}       
 \input{model}       \newpage
 \input{cosi}        \newpage
 \input{types}       \newpage
+
+
 \input{chr}
 
 \newpage
