--- a/report/types/cache.tex
+++ b/report/types/cache.tex
@@ -1,4 +1,4 @@
-\subsection{缓存探测}
+\subsection{缓存探测}\label{sec:cache}
 
 当用于访问一个网页，由于用户再次访问同一个网页的概率较大，浏览器会将某些资源，比如图像、脚本、HTML 代码，缓存在用户的机器上。当用户再次访问用一个网页，浏览器不必从服务器再次下载，而可以更快速地从本地存储读取，从而加快了网页加载的速度。缓存探测漏洞基于检测某个资源是否被缓存，从而攻击者可以判断被攻击者是否曾经访问有个网页。
 
