--- a/report/input.tex
+++ b/report/input.tex
@@ -7,7 +7,7 @@
 \input{abstract}    \newpage
 \input{intro}       
 \input{model}       \newpage
-\input{cosi}        \newpage
+%\input{cosi}        \newpage
 \input{types}       \newpage
 
 
