--- a/report/bib.bib
+++ b/report/bib.bib
@@ -22,6 +22,30 @@
   	urldate = {2022-09-07},
 }
 
+@misc{fix,
+	author  = {Weiss, Yoav},
+	title   = {[resource-timing] Report performance entries with failing status codes},
+	url     = {https://chromium.googlesource.com/chromium/src/+/5e556dd80e03b7a217e10990d71be25d07e1ece7},
+  	date    = {2019-11-11},
+  	urldate = {2022-09-07},
+}
+
+@misc{fixcode,
+	author  = {Weiss, Yoav},
+	title   = {[resource-timing] Report performance entries with failing status codes},
+	url     = {https://github.com/chromium/chromium/commit/5e556dd80e03b7a217e10990d71be25d07e1ece7},
+  	date    = {2019-11-11},
+  	urldate = {2022-09-07},
+}
+
+@misc{sprt,
+	author  = {Myrzakerey, Miras},
+	title   = {Treat urn:uuid resources as http resources for ResourceTiming purposes. },
+	url     = {https://github.com/chromium/chromium/commit/35d595aa9c977320c3d9aa58be69b21905e02f3d},
+  	date    = {2021-06-08},
+  	urldate = {2022-09-07},
+}
+
 @misc{m_now,
     author  = {{MDN contributors}},
     title   = {performance.now()},
