--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,3 +1,10 @@
 \begin{abstract}
-    浏览器是最广泛使用的软件之一，因此保证浏览器的安全性具有非常高的重要性。浏览器安全的一个方面是用户隐私的保护，即防止用户信息被泄漏给第三方。跨站点泄露漏洞是一类旁道攻击，当用户访问攻击网站后，目标网站上的某些信息可以被泄露给攻击者。此研究报告介绍了跨站点泄露漏洞的形式模型，其次分析了若干种泄露的工作原理以及防范措施，最后聚焦一个曾经影响到 Chromium 浏览器的漏洞。
+    浏览器是最广泛使用的软件之一，因此保证浏览器的安全性具有非常高的重要性。浏览器安全的一个方面是用户隐私的保护，即防止用户信息被泄漏给第三方。跨站点泄露漏洞是一类旁道攻击，当用户访问攻击网站后，目标网站上的某些信息可以被泄露给攻击者。此研究报告介绍了跨站点泄露漏洞的形式模型，其次分析了若干种泄露的工作原理以及防范措施。最后聚焦一类影响到 Chromium 浏览器的漏洞，并分析漏洞的工作原理以及修复方法。
+
+    关键词：浏览器安全、跨站点泄露漏洞、Chromium。
+
+    A web browser is one of the most commonly-used types of software, therefore the task of ensuring browser security is of high importance. One aspect of browser security is user privacy, that is preventing the unintended leakage of user data to third parties. Cross-site leaks are a class of vulnerabilities that leaks certain pieces of information from a target webpage when the user visits an attacker's webpage. This report introduces a formal model for XSLeaks, then analyzes multiple classes of vulnerabilities along with possible prevention methods. Finally, focus is drawn to a series of bugs affecting the Chromium browser, and their attack and mitigation strategies are analyzed.
+
+    Key words: web browser security, XSLeaks, Chromium
+
 \end{abstract}
