--- a/report/bib.bib
+++ b/report/bib.bib
@@ -14,6 +14,22 @@
   	urldate = {2022-09-16},
 }
 
+@misc{ee,
+	author  = {{w3schools}},
+	title   = {HTML Event Attributes},
+	url     = {https://www.w3schools.com/tags/ref_eventattributes.asp},
+  	date    = {2022-09-27},
+  	urldate = {2022-09-16},
+}
+
+@misc{pm,
+	author  = {{MDN contributors}},
+	title   = {Window.postMessage()},
+	url     = {https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage},
+  	date    = {2022},
+  	urldate = {2022-09-16},
+}
+
 @misc{papi,
 	author  = {Buckler, Craig},
 	title   = {How to Evaluate Site Speed with the Performance API},
@@ -62,6 +78,7 @@
     urldate = {2015}
 }
 
+
 @misc{p_moz,
     author  = {Christensen, Alex},
     title   = {Bug 146531 - Reduce resolution of performance.now},
@@ -109,6 +126,38 @@ Attacks in JavaScript},
     url     = {https://xsleaks.dev/docs/attacks/timing-attacks/clocks/},
     date    = {2020-12-23},
     urldate = {2022-09-14}
+}
+
+@misc{cachetimer,
+    author  = {Sousa, Manuel and terjanq and Clapis, Roberto and Dworken, David and NDevTK and 1lastBr3ath and Brasco and rick.titor and Fredrickson, Chris and jub0bs},
+    title   = {Cache Probing with Error Events},
+    url     = {https://xsleaks.dev/docs/attacks/cache-probing/#cache-probing-with-error-events},
+    date    = {2021-09-30},
+    urldate = {2022-09-14}
+}
+
+@misc{cachecors,
+    author  = {Sousa, Manuel and terjanq and Clapis, Roberto and Dworken, David and NDevTK and 1lastBr3ath and Brasco and rick.titor and Fredrickson, Chris and jub0bs},
+    title   = {CORS error on Origin Reflection misconfiguration},
+    url     = {https://xsleaks.dev/docs/attacks/cache-probing/#cors-error-on-origin-reflection-misconfiguration},
+    date    = {2021-09-30},
+    urldate = {2022-09-14}
+}
+
+@misc{cachedef,
+    author  = {Sousa, Manuel and terjanq and Clapis, Roberto and Dworken, David and NDevTK and 1lastBr3ath and Brasco and rick.titor and Fredrickson, Chris and jub0bs},
+    title   = {Defense},
+    url     = {https://xsleaks.dev/docs/attacks/cache-probing/#defense},
+    date    = {2021-09-30},
+    urldate = {2022-09-14}
+}
+
+@misc{xssearch,
+	author  = {Herrera, Luan},
+	title   = {XS-Searching Google’s bug tracker to find out vulnerable source code},
+	url     = {https://medium.com/@luanherrera/xs-searching-googles-bug-tracker-to-find-out-vulnerable-source-code-50d8135b7549},
+  	date    = {2018-11-20},
+  	urldate = {2022-09-14},
 }
 
 @article{cosi,
