--- a/report/input.tex
+++ b/report/input.tex
@@ -3,14 +3,12 @@
 
 
 
-\maketitle          \newpage
+\input{title}
 \input{abstract}    \newpage
 \input{intro}       
 \input{model}       \newpage
 %\input{cosi}        \newpage
 \input{types}       \newpage
-
-
 \input{chr}
 
 \newpage
