--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,7 +1,7 @@
 \section{引言}
 
-在现在日益依赖技术的世界中，用户可以有意或无意地将个人信息上传到互联网。因此恶意行为者通过互联网窃取个人信息的激励以及潜在的收益也日益增加。因此网络安全以及在线上的个人隐私的维护是安全研究人员与恶意攻击者之间无尽的战争。
+在现在日益依赖技术的世界中，用户可以有意或无意地将个人信息上传到互联网。因此恶意行为者通过互联网窃取个人信息的激励以及潜在的收益也日益增加。因此网络安全以及线上的个人隐私的维护是安全研究人员与恶意攻击者之间无尽的战争。
 
 跨站点泄露漏洞（Cross-site leaks, XSLeaks）\cite{xsleaks} 是一类浏览器中的旁道攻击。当用户访问攻击者控制的网站或包含攻击者的恶意代码的网站（统称“攻击网站”），攻击者就可以通过使用跨站点泄露漏洞而获取用户在另一个网站（统称“目标网站”）上的信息。
 
-跨站点泄露漏洞的诞生是由跨来源资源共享（CORS）策略而引发的。某个资源的来源是由它的方案 (协议)，主机 (域名) 和端口而组成。两个资源是同源的当且仅当以上三个元素都相等 \cite{origin}。服务器向浏览器发送的响应中的 CORS 头指示浏览器如何响应中的资源。若不许跨站点的网站或脚本读取资源，则攻击者必须使用旁道攻击技巧——跨站点泄露漏洞——窃取信息。
+跨站点泄露漏洞的诞生是由跨来源资源共享（CORS）策略而引发的。某个资源的来源是由它的方案 (协议)，主机 (域名) 和端口而组成。两个资源是同源的当且仅当以上三个元素都相等 \cite{origin}。服务器向浏览器发送的响应中的 CORS 头指示浏览器应该如何设置响应中的资源的访问全。若不许跨站点的网站或脚本读取资源，则攻击者必须使用旁道攻击技巧——跨站点泄露漏洞——窃取信息。
