--- a/report/types.tex
+++ b/report/types.tex
@@ -1,9 +1,7 @@
 \section{漏洞类型}
 
 \input{types/timing}
-\input{types/cache}
+\input{types/cache}\newpage
 \input{types/xssearch}
-\input{types/winref}
-\input{types/postmsg}
+\input{types/postmsg}\newpage
 \input{types/error}
-\input{types/frame}
